# rag-kb

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: factory.py  tool_registry.py
backend/app/api/: auth.py  deps.py  health.py  query.py  router.py
backend/app/core/: audit.py  config.py  exceptions.py  logging.py
backend/app/db/: base.py
backend/app/models/: auth.py  crm.py  customer.py  document_meta.py  product_kb_metadata.py  query.py
backend/app/prompts/: base_qa.txt
backend/app/services/: auth.py  auth_mock.py  crm.py  crm_mock.py  customer_match.py  llm.py  product_kb_extract.py  qdrant_store.py  rag_pipeline.py  storage.py
backend/data/: customer_master_init_sample.xlsx
backend/migrations/: env.py
backend/migrations/versions/: 0001_dept_mapping.py  0002_customer_master_data.py  0003_document_meta_acl_align.py
backend/prompts/: extract_product_kb.txt
backend/scripts/: _env_check.py  _xlsx_schema.py  batch_extract_product_kb.py  ingest_test_docs.py  init_customer_master.py  match_customer.py  verify_langgraph.py
backend/scripts/docx-build/: arch_part1.js  arch_part2.js  arch_part3.js  common.js  generate_arch.js  generate_sop.js  generate_taskbook.js  sop_part1.js  sop_part2.js  sop_part3.js  taskbook_part1.js  taskbook_part2.js  taskbook_part3.js  taskbook_part4.js
backend/tests/agents/: test_crm_tools.py  test_factory.py  test_langgraph_setup.py  test_tool_registry.py  tool_registry_snapshot.json
docs/: ANTIPATTERNS.md  (+14 more)
(+97 files in other folders)
