[project]
name = "rag-kb-backend"
version = "0.1.0"
description = "Private RAG knowledge base backend"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "llama-index-core>=0.14.22",
    "llama-index-embeddings-openai-like>=0.3.1",
    "llama-index-llms-openai-like>=0.7.2",
    "loguru>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "qdrant-client>=1.18.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring real external services (LLM/Rerank/Embedding)",
]
